--- a/Client/index.html
+++ b/Client/index.html
@@ -1,7 +1,9 @@
 <html>
 <body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <div id="start">
   </div>
 <script src="dist/bundle.js"></script>
+
 </body>
 </html>
